[gd_scene load_steps=9 format=3 uid="uid://world"]

[ext_resource type="Script" path="res://scenes/world/world.gd" id="1_world"]
[ext_resource type="PackedScene" uid="uid://player" path="res://scenes/player/player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://lobby_totem" path="res://scenes/world/lobby_totem.tscn" id="3_lobby_totem"]
[ext_resource type="PackedScene" uid="uid://invui001" path="res://scenes/ui/inventory/inventory_ui.tscn" id="4_inv_ui"]
[ext_resource type="PackedScene" uid="uid://toast001" path="res://scenes/ui/toast/toast_ui.tscn" id="5_toast"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(20, 1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(20, 1, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.3, 0.5, 0.3, 1.0)

[node name="World" type="Node3D"]
script = ExtResource("1_world")

[node name="Environment" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Ground"]
shape = SubResource("BoxShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Ground"]
mesh = SubResource("BoxMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.866, -0.354, 0.354, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 5, 10, 5)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]

[node name="LobbyTotem" parent="Environment" instance=ExtResource("3_lobby_totem")]

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="Spawn1" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 0)

[node name="Spawn2" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 0)

[node name="Spawn3" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3)

[node name="Spawn4" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 3)

[node name="Players" type="Node3D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../Players")

[node name="WorldItems" type="Node3D" parent="."]

[node name="ItemSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../WorldItems")

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatusLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 40.0
text = "Connecting..."

[node name="LeaveButton" type="Button" parent="UI"]
offset_left = 10.0
offset_top = 50.0
offset_right = 110.0
offset_bottom = 80.0
text = "Leave"

[node name="InventoryUI" parent="UI" instance=ExtResource("4_inv_ui")]
visible = false

[node name="ToastUI" parent="UI" instance=ExtResource("5_toast")]

[connection signal="pressed" from="UI/LeaveButton" to="." method="_on_leave_button_pressed"]
